@startuml

title __APP's Class Diagram__\n

  namespace com.example.userapp {
    class com.example.userapp.BuildConfig {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.GridAdapter {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.GroundRobotControlActivity {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.HomeActivity {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.InputValidation {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.SignInActivity {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.ProfileUpdateActivity {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.RecyclerViewAdapter {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.SignUpActivity {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.model.User {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.ViewReadingsActivity {
    }
  }
  

  namespace com.example.userapp {
    class com.example.userapp.ViewSnapshotsActivity {
    }
  }
  

  com.example.userapp.GridAdapter -up-|> android.widget.ArrayAdapter
  com.example.userapp.GroundRobotControlActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.userapp.HomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.userapp.SignInActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.userapp.ProfileUpdateActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.userapp.RecyclerViewAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.userapp.RecyclerViewAdapter o-- com.example.userapp.RecyclerViewAdapter.IMyItemClickListener : myItemClickListener
  com.example.userapp.SignUpActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.userapp.ViewReadingsActivity .up.|> com.example.userapp.RecyclerViewAdapter.IMyItemClickListener
  com.example.userapp.ViewReadingsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.userapp.ViewReadingsActivity o-- com.example.userapp.RecyclerViewAdapter : adapter
  com.example.userapp.ViewSnapshotsActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
